improvements: modal in delete works, added tags

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -17636,3 +17636,7 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 6 Free";
   font-weight: 400;
 }
+
+body {
+  background-color: whitesmoke;
+}
