--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -13,3 +13,6 @@ $fa-font-path: '../fonts/font-awesome' !default;
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 @import '~@fortawesome/fontawesome-free/scss/regular.scss';
 
+body{
+    background-color: whitesmoke;
+}
